[tool.poetry]
name = "graphrag-astra"
version = "0.1.0"
description = ""
authors = ["Christophe Bornet <cbornet@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
graphrag = "^0.3.6"
astrapy = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
